--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@radix-ui/colors": "^3.0.0",
 		"@radix-ui/react-icons": "^1.3.2",
 		"@radix-ui/themes": "^3.2.1",
+		"@vercel/speed-insights": "^1.3.1",
 		"next": "15.3.8",
 		"radix-ui": "^1.4.2",
 		"react": "^19.1.0",
